[gd_scene load_steps=6 format=3 uid="uid://dbuap21pm615o"]

[ext_resource type="Script" path="res://player.gd" id="1_d1quc"]
[ext_resource type="Texture2D" uid="uid://ddmbsefm28yyc" path="res://drawing.svg" id="2_q1kvc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_77xsl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_q1kvc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rtfif"]
size = Vector2(52, 78)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_rdkcd"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Sprite:modulate")
properties/2/spawn = true
properties/2/replication_mode = 2

[node name="Player" type="RigidBody2D"]
collision_layer = 2
collision_mask = 0
gravity_scale = 0.0
linear_damp = 1.0
script = ExtResource("1_d1quc")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_77xsl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rtfif")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_rdkcd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
offset_right = 200.0
offset_bottom = 81.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Player GUI"

[node name="Label2" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Health:"

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
value = 100.0

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DataControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UsernameLabel" type="Label" parent="DataControl"]
layout_mode = 0
offset_left = 56.0
offset_right = 135.0
offset_bottom = 23.0
text = "username"
horizontal_alignment = 1

[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
